feature: adding header and main content

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --main-header-height: 80px;
 }
 
 @media (prefers-color-scheme: light) {
